Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8469

Admit memory not set in backend descriptor for coordinator-only nodes

    XMLWordPrintableJSON

Details

    • ghx-label-2

    Description

      When configuring admission control with dedicated coordinator daemons, queries in pools with memory limits fail with the admission rejections like the following:

      Rejected query from pool root.default: request memory needed 3.00 GB per node is greater than memory available for admission 0 of coord1.example.com:22000. Use the MEM_LIMIT query option to indicate how much memory is required per node.

      Tracing this in the code leads us to line 576 of admission-controller.cc and therefore to suspect that the local TBackendDescriptor (local_backend_descriptor_) for the coordinator node in scheduler.cc never has admit_mem_limit set, and thus ends up with the default value of 0.

      The issue goes away if NO_SPECIALIZATION is used instead of COORDINATOR_ONLY.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              ianbuss Ian Buss
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: